--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 </head>
 <body>
     <canvas id="matrix"></canvas>
+
+    <!-- Matrix on/off toggle -->
+    <button id="matrix-toggle" style="position:fixed;right:12px;top:12px;z-index:999;background:#0b0b0b;color:#0f0;padding:8px 12px;border:1px solid #0f0;border-radius:6px;font-family:monospace;">
+      Pause Matrix
+    </button>
+
     <!-- Header with site title and toolbar -->
     <header id="site-header" class="site-header" role="banner">
       <div class="header-inner">
